[project]
name = "pytools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
    "bayesian-optimization>=3.0.1",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
